--- a/resource/style/style.css
+++ b/resource/style/style.css
@@ -1,5 +1,5 @@
-* {
-    font-family: 'Noto Sans KR', sans-serif;
+body {
+    font-family: 'Noto Sans KR', sans-serif !important;
 }
 
 .ir{
@@ -45,11 +45,9 @@ body{
     box-sizing: border-box;
     width: 360px;
     background: #fff;
-    margin: 0 14px;
+    margin-right: 28px;
     padding: 31px 27px;
 }
-
-
 
 .list-item{
     position: relative;
@@ -63,6 +61,30 @@ body{
     position: relative;
     width: 100%;
     height: 130px;
+}
+
+.list-item > li.soldout::before{
+    position: absolute;
+    content: '';
+    width: 94px;
+    height: 130px;
+    z-index: 99;
+    top:0;
+    background: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+}
+
+.list-item > li.soldout::after{
+    position: absolute;
+    content: '';
+    background-image: url('http://localhost:3000/img/Sold-out.png');
+    background-size: 57.51px 44.85px;
+    width: 57.51px;
+    height: 44.85px;
+    top: 50%;
+    left: 50%;
+    z-index: 999;
+    transform: translate(-50%, -50%) rotate(5.15deg);
 }
 
 .btn-item {
@@ -85,16 +107,6 @@ body{
     height: 65px;
 }
 
-.list-item .img-item.soldout::after{
-    position: absolute;
-    /* content: url('http://localhost:3000/img/Sold-out.png'); */
-    content:'';
-    background-image: url('http://localhost:3000/img/Sold-out.png');
-    width: 36px;
-    height: 65px;
-    z-index: 9999;
-}
-
 .btn-item > .tit-item {
     font-size: 9px;
     font-weight: 500;
@@ -102,17 +114,24 @@ body{
     color: #333;
 }
 
+/*
+여기서는 height를 설정해줘도 되지만, 
+위 아래 padding 값을 동일하게 주면 
+텍스트의 수직 정렬이 필요없어진다!
+*/
+
 .btn-item > .txt-item {
     width: 70px;
-    height: 22px;
+    /* height: 22px; */
+    padding: 5px 0;
     background: #6327FE;
     border-radius: 50px;
 
     font-weight: 500;
     font-size: 12px;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 
     color: #FFFFFF;
 }
@@ -125,19 +144,24 @@ body{
     transform: scale(1.03);
 }
 
-.cont-return {
-    position: relative;
-    width: 100%;
-    height: 33px;
-    margin-bottom: 11px;
+/*
+계속 쓸데없이 position: relative 를 습관적으로 주는데 불필요한 습관을 줄이자
+또한 자식요소가 이미 height를 가지기 때문에 컨테이너는 height 값을 주지말자!
+*/
 
+.cont-return {
+    /* position: relative;
+    width: 100%;
+    height: 33px; */
+    margin-bottom: 11px;
     display: flex;
 }
 
+/* 여기도 마찬가지 */
 .info-balance {
     flex: 2;
-    position: relative;
-    width: 100%;
+    /* position: relative;
+    width: 100%; */
     height: 32px;
     border-radius: 5px;
     background: #EAE8FE;
@@ -163,8 +187,8 @@ body{
 }
 
 .btn-return {
-    position: relative;
-    width: 100%;
+    /* position: relative;
+    width: 100%; */
     height: 32px;
 
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
@@ -188,9 +212,10 @@ body{
     flex: 1;
 }
 
+/* 여기도 마찬가지 */
 .inp-put {
-    width: 100%;
-    height: 32px;
+    /* width: 100%;
+    height: 32px; */
     border: 1px solid #BDBDBD;
     box-sizing: border-box;
     border-radius: 5px;
@@ -209,7 +234,7 @@ body{
 }
 
 .btn-put {
-    width: 100%;
+    /* width: 100%; */
     height: 32px;
     border-radius: 5px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
@@ -258,10 +283,11 @@ body{
     flex: 2;
 }
 
+/* 여기도 마찬가지 */
 .list-item-staged .item-staged {
     box-sizing: border-box;
     position: relative;
-    width: 100%;
+    /* width: 100%; */
     height: 46px;
     border-radius: 5px;
     background-color: #fff;
@@ -305,9 +331,13 @@ body{
     align-items: center;
 }
 
+/* 여기도 마찬가지긴 하지만
+아래에서 flex:1 로 인해 width가 애초에 덮어씌여진다!
+*/
+
 .btn-get {
-    position: relative;
-    width: 100%;
+    /* position: relative;
+    width: 100%; */
     height: 106px;
 
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5);
@@ -328,7 +358,6 @@ body{
     position: relative;
     box-sizing: border-box;
     width: 360px;
-    margin: 0 14px;
 }
 
 .my-info .cont-mymoney {
